Kind of fix expand button z-index issue.

--- a/app/less/classes/lyrics.less
+++ b/app/less/classes/lyrics.less
@@ -95,9 +95,14 @@
 .lyric-button-block {
     position: absolute;
     padding: @app-thin-margin;
-    z-index: @lyric-column-button-z-index;
 
     background-color: gray;
+}
+
+.lyric-column {
+    .lyric-button-block {
+        z-index: @lyric-column-button-z-index;
+    }
 }
 
 .lyric-icon {
